# it-support-classification-agent

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml
instructions/: instrucoes.txt
knowledge_base/: base_support_ti.json  support_procedures.json
utils/codes/: agent-test-cases.py  agent-vector-store.py  explore-api.py  explore-upload-methods.py  test-connection.py  test-vector-store.py
